--- a/src/components/newest-perfume-item/newest-perfume-item.styles.scss
+++ b/src/components/newest-perfume-item/newest-perfume-item.styles.scss
@@ -22,10 +22,10 @@
         .name {
             font-style: normal;
             font-weight: 400;
-            font-size: 18px;
+            font-size: 16px;
             line-height: 20px;
             text-align: left;
-            color: (--product-name);
+            color: var(--product-name);
             margin-bottom: 20px;
         }
 
