--- a/src/components/newest-perfume/newest-perfume.styles.scss
+++ b/src/components/newest-perfume/newest-perfume.styles.scss
@@ -1,3 +1,18 @@
 .newest-perfume {
     display: flex;
+
+    .overlap {
+        max-height: 50vh;
+        overflow: hidden;
+        overflow-y: scroll;
+
+        &::-webkit-scrollbar {
+            width: 0;
+            background: transparent;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background: transparent;
+        }
+    }
 }
